fixed spacing shopping screen

--- a/src/styles/screens/Shopping.css
+++ b/src/styles/screens/Shopping.css
@@ -17,5 +17,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: 8px auto;
+}
+
+@media (min-width: 750px) {
+  .align {
+    margin: 16px auto;
+  }
 }
